# kronk

./: .nvim_run  Cargo.toml  README.md
examples/: if.kronk  infinite.kronk  list_ops.kronk  main.kronk  string_indexing.kronk  while.kronk  while2.kronk
kronk/: Cargo.toml
kronk-core/: Cargo.toml
kronk-core/src/: eval.rs  lib.rs  parser.rs  tokenizer.rs
kronk/src/: main.rs
samples/: 2d_list.kronk  blocks.kronk  for.kronk  hello.kronk  hello.krunk  if.kronk  invalid_parser.kronk  invalid_tokens.kronk  list.kronk  list_loop.kronk  math.kronk  nested_blocks.kronk  reassign.kronk  roar.kronk  while.kronk  while2.kronk
